[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Font/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI_Elements/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://src/UI_Elements/MenuContainer.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.501961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MenuButton" type="MarginContainer"]
margin_right = 90.0
margin_bottom = 16.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_right = 108.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[node name="Highlight" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 108.0
margin_bottom = 24.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 108.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 3
custom_constants/margin_left = 7
custom_constants/margin_bottom = 3

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 7.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "<Button>"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="MenuContainer" parent="." instance=ExtResource( 3 )]
margin_right = 108.0
margin_bottom = 24.0

[connection signal="mouse_entered" from="Button" to="." method="fade" binds= [ true ]]
[connection signal="mouse_exited" from="Button" to="." method="fade" binds= [ false ]]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="button_pressed" from="MenuContainer" to="." method="_on_MenuContainer_button_pressed"]
